--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'bootstrap/scss/bootstrap';
+
+$base-color: #1671ca;
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #e7e6e64f;}
+
+// Override material styles
+.mat-form-field-wrapper {
+    margin: 0 !important;
+    padding: 0;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline-thick {
+    //color: $base-color;
+}
+
+.mat-progress-spinner circle, .mat-spinner circle {
+    stroke: $base-color !important;
+}
+
+.mat-toolbar.mat-primary {
+    background: $base-color !important;
+}
+
+.mat-button.mat-primary {
+    color: $base-color !important;
+}
+
+.mat-form-field-outline-start {
+    border-radius: 0 !important;
+  }
+  
+.mat-form-field-outline-end {
+    border-radius: 0 !important;
+  }
+
+.mat-flat-button {
+    border-radius: 0;
+}
+
+.mat-form-field-wrapper {
+    margin: 0;
+    padding: 0;
+}
